--- a/style.css
+++ b/style.css
@@ -1,4 +1,18 @@
-html {
-  height: 100%;
-  width: 100%;
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: black;
+}
+
+.container {
+    position: relative;
+}
+
+video, canvas {
+    position: absolute;
+    top: 0;
+    left: 0;
 }
